<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/musicImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sample_music" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/musicName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bye_bye"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/artistName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marshmello_juice_wrld"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_09"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>